# snipx.sh

./: .editorconfig  .gitignore  .mise.toml  .test.db-shm  .test.db-wal  CLAUDE.md  CONTRIBUTING.md  README.md  SNIPX.PRD.md  biome.json  index.html  nupm.nuon  package.json  tsconfig.json  vite.config.ts
api/: fs.ts  index.ts  seed.ts
api/lib/: id.ts
api/routes/: bookmarks.ts  collections.ts  docs.ts  search.ts  snippets.ts  sync.ts  tags.ts
nu/: lib.nu  snipx.nu
scripts/: add.nu  create.nu  lib.nu
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: AddForm.vue  AppHeader.vue  BookmarkDetail.vue  BookmarkList.vue  DocDetail.vue  DocList.vue  ReplPanel.vue  Sidebar.vue  SnippetDetail.vue  SnippetList.vue
src/components/learn/: AskPanel.vue  GhostEditor.vue  LearnSidebar.vue  LessonContent.vue  OutputPanel.vue  SpeedBar.vue  TaskList.vue
src/data/: lessons.ts
src/lib/: client.ts  theme.ts  types.ts
src/stores/: bookmarks.ts  docs.ts  learn.ts  snippets.ts
